--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.0",
     "sass": "^1.35.1",
+    "socket.io": "^4.5.2",
     "twilio": "^3.82.1"
   },
   "devDependencies": {
